# incident-postmortem-generator

./: .gitignore  README.md  main.py  pyproject.toml
example_out/: postmortem-INC-2025-0017.md
examples_in/: incident.sample.yml
src/ipg/: cli.py  exporters.py  models.py  parser.py  renderer.py
src/ipg/templates/: default.md.j2
